FIX strange scrollbar on chrome /customize

--- a/src/components/RoundedList/rounded-list.module.scss
+++ b/src/components/RoundedList/rounded-list.module.scss
@@ -1,4 +1,5 @@
 @import './../../assets/sass/var.scss';
+@import './../../assets/sass/theme.scss';
 
 .rounded-list {
     display: flex;
@@ -8,6 +9,7 @@
 
     overflow-y: hidden;
     padding-right: 30px;
+    @extend .custom-scrollbar;
 
     .item {
         border-radius: 999px;
